Fix overflow problems in trello

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 
 // Limit the "Manage predefined variations" dialog table content height.
 html {
+    overflow-y: hidden;
+    
     body{
         .mat-mdc-dialog-container {
             .mat-mdc-dialog-content.mdc-dialog__content.dialog-table{
